--- a/Samie/index.html
+++ b/Samie/index.html
@@ -1043,24 +1043,29 @@
                         </div>
                     </div>
                 </div>
-                <form class="ferrari-form">
+                <form class="ferrari-form" action="https://api.web3forms.com/submit" method="post">
+                    <input type="hidden" name="access_key" value="abf20c02-e56e-4b67-827d-fa4e634a800d">
+                  <input type="hidden" name="subject" value="New Contact Form Submission from Web3Forms" />
+                 <input type="hidden" name="from_name" value="my portfolio`" />
+
+                 
                     <div class="ferrari-input-group">
                         <label for="name">Your Name</label>
-                        <input type="text" id="name" required>
+                        <input type="text" id="name" name="name">
                     </div>
                     <div class="ferrari-input-group">
-                        <label for="email">Your Email</label>
-                        <input type="email" id="email" required>
+                        <label for="email" >Your Email</label>
+                        <input type="email" id="email" name="email" required>
                     </div>
                     <div class="ferrari-input-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" id="subject" required>
+                        <label for="subject" >Subject</label>
+                        <input type="text" id="subject" name="Subject" required>
                     </div>
                     <div class="ferrari-input-group">
                         <label for="message">Your Message</label>
-                        <textarea id="message" required></textarea>
+                        <textarea id="message" name="Message"></textarea>
                     </div>
-                    <button type="submit" class="ferrari-submit" value="abf20c02-e56e-4b67-827d-fa4e634a800d">Send Message</button>
+                    <button type="submit" class="ferrari-submit">Send Me
                 </form>
             </div>
         </div>
@@ -1194,12 +1199,12 @@
         });
 
         // Form submission
-        const contactForm = document.querySelector('.ferrari-form');
-        contactForm.addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Thank you for your message! I will get back to you soon.');
-            this.reset();
-        });
+        // const contactForm = document.querySelector('.ferrari-form');
+        // contactForm.addEventListener('submit', function(e) {
+        //     e.preventDefault();
+        //     alert('Thank you for your message! I will get back to you soon.');
+        //     this.reset();
+        // });
 
         // Newsletter form
         const newsletterForm = document.querySelector('.bugatti-newsletter-form');
