--- a/Samie/index.html
+++ b/Samie/index.html
@@ -762,7 +762,7 @@
             <nav class="mustang-nav">
                 <a href="#" class="mustang-logo">Samuel<span>Ofosu</span></a>
                 <ul class="mustang-menu">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="https://ofosu-samuel-g6pm.vercel.app/">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
